Fix nav menu spacing

--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -63,12 +63,20 @@ a:hover {
     box-shadow: 10px 20px var(--text-color);
 }
 
-.main-left, .main-right {
+.main-right {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+}
+
+.main-left {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .main-left-phone {
@@ -93,7 +101,7 @@ a:hover {
 } */
 
 .nav-item {
-    margin-bottom: 5rem;
+    padding: 0.25em;
 }
 
 
@@ -111,6 +119,10 @@ a:hover {
 
 .social a {
     margin: 6px 12px;
+}
+
+.social {
+    padding: 0.25em;
 }
   
 .social i {
